fix work img display too large

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 html {
@@ -156,9 +158,8 @@ a:hover {
 /* sections */
 
 section {
-  padding-top: 4vh;
-  height: 96vh;
-  margin: 0 10rem;
+  padding-top: 6vh;
+  flex: 0 0 100vh;
   box-sizing: border-box;
   min-height: fit-content;
 }
@@ -266,8 +267,11 @@ section {
 
 .work-img {
   border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+  max-width: 100%;
+  max-height: 40vh;
+  height: auto;
+  display: block;
+  margin: auto;
 }
 
 .work-title {
@@ -302,10 +306,6 @@ section {
   gap: 2rem;
 }
 
-.coming-soon {
-  filter: blur(5px);
-}
-
 .article-container {
   position: relative;
   text-align: center;
@@ -323,13 +323,16 @@ section {
   -webkit-text-stroke: 2px black;
 }
 
+.coming-soon {
+  filter: blur(5px);
+}
+
 /* contact section */
 
 #contact {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /* height: 70vh; */
 }
 
 .contact-info-upper-container {
